--- a/custom_style.css
+++ b/custom_style.css
@@ -13,13 +13,37 @@
 	 background-image: linear-gradient(#006600, white);
 }
 
-.overconsumption {
-	background-image: url('IMG_0011.png');
+.perm_0 {
+	background-image: url('perm_0.png');
 	background-position: center;
   	background-repeat: no-repeat;
   	background-size: 100% 100%;
   	position: relative;
-	height : 600px;
+	height : 700px;
+}
+.perm_1 {
+	background-image: url('perm_1.png');
+	background-position: center;
+  	background-repeat: no-repeat;
+  	background-size: 100% 100%;
+  	position: relative;
+	height : 700px;
+}
+.perm_2 {
+	background-image: url('perm_2.png');
+	background-position: center;
+  	background-repeat: no-repeat;
+  	background-size: 100% 100%;
+  	position: relative;
+	height : 700px;
+}
+.perm_3 {
+	background-image: url('perm_3.png');
+	background-position: center;
+  	background-repeat: no-repeat;
+  	background-size: 100% 100%;
+  	position: relative;
+	height : 700px;
 }
 
 .page_header {
