--- a/custom_style.css
+++ b/custom_style.css
@@ -11,10 +11,52 @@
 
 .screen_width_img {
 	width: 100vw;
+	height: 100vh;
 }
 
 .green_fade {
 	 background-image: linear-gradient(#006600, white);
+}
+
+#shed_div {
+	background-image: url('shed_compost.png');
+}
+#path_div {
+	background-image: url('neutral_bg.png');
+}
+#windbreak_div {
+	background-image: url('windbreak.png');
+}
+#orchard_div {
+	background-image: url('orchard.png');
+}
+#riparian_div {
+	background-image: url('riparian.png');
+}
+#grasses_div {
+	background-image: url('grasses.png');
+}
+#keyhole_div {
+	background-image: url('keyhole.png');
+}
+#invasive_div {
+	background-image: url('neutral_bg.png');
+}
+#long_term_div {
+	background-image: url('neutral_bg.png');
+}
+
+.bg_image {
+	background-position: center;
+  	background-repeat: no-repeat;
+  	background-size: 100% 100%;
+  	position: relative;
+	height : 500px;
+}
+
+.accordion:hover {
+    background-color: lightgreen;
+    cursor: pointer;
 }
 
 .perm_0 {
