--- a/custom_style.css
+++ b/custom_style.css
@@ -54,6 +54,14 @@
 	height : 500px;
 }
 
+.no_bg_image {
+	background-image: url('neutral_bg.png') !important;
+	background-position: center;
+  	background-repeat: no-repeat;
+  	background-size: 100% 100%;
+  	position: relative;
+}
+
 .accordion:hover {
     background-color: lightgreen;
     cursor: pointer;
